--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,5 @@ import:
   - redis
 - package: github.com/gorilla/mux
   version: ^1.1.0
+- package: github.com/apcera/termtables
+- package: github.com/gosuri/uilive
