--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,4 @@ import:
   version: ^1.1.0
 - package: github.com/apcera/termtables
 - package: github.com/gosuri/uilive
+- package: github.com/elazarl/go-bindata-assetfs
