--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ _testmain.go
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# external packages folder
+bin
 vendor/
 unredis
 unredis_stats
